--- a/style.css
+++ b/style.css
@@ -1,83 +1,151 @@
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body > header {
-    background-color: aquamarine;
-    padding: 16px 0;
+header , 
+section h2,
+section h3,
+form button {
+    font-family: 'Orbitron', sans-serif; 
+    font-weight: normal;
 }
 
-header .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+body,
+input,
+textarea {
+    font-family: 'Rasa', serif;
 }
 
-header li {
+header {
+    padding:  16px 0;
+    background-color: rgb(164, 155, 155);
+    color: rgb(11, 8, 199);
+}
+
+/*header h1 {
+    font-weight: normal;
+}*/
+
+header nav li {
     display: inline;
+    margin: 16px;
+    font-size: 16px;
+}
 
+header nav li a {
+    text-decoration: none;
+    color: rgb(30, 2, 248);
 }
 
 .container {
-    width: 1366px;
+    max-width: 1280px;
+    width: 100%;
     margin: 0 auto;
 }
 
-.articles {
+header .container,
+section .container {
     display: flex;
-    flex-wrap: wrap;
+    align-items:center;
+    justify-content: space-between;
+}
+.brands-list img {
+    height: 24px;
+}
+
+.brands-list li {
+    display: inline;
+    margin-right: 8px;
+}
+
+section .container {
+  align-items:self-start;  
+}
+
+section {
+    padding: 24px 0;
+}
+
+section h2 {
+    margin-bottom: 16px;
+}
+
+section {
+    color: rgb(247, 247, 247);
+}
+
+section p {
+    margin-bottom: 8px;
+}
+.story-front {
+    margin-right: 32px;
+}
+
+body {
+    background: black;
+}
+
+.social-links img {
+    height: 24px;
+}
+
+#contact .container {
+    display: block;
+}
+
+.social-links li {
+    display: inline;
+    margin-left: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+.methods {
+    display: flex;
     justify-content: space-between;
 }
 
-.articles article img {
-    height:  100px;
-}   
-
-    .articles article {
-        width: 30%;
-    }
-
-    section {
-        padding: 16px 0;
-    }
-
-    section h2,
-    .articles article {
-        margin-bottom: 16px;
-    }
-
-  .articles article {
-    margin-top: 16px;
-    margin-bottom: 16px;
-  }  
-
-  .articles article a {
-    background-color: rgb(39, 198, 190);
-    color: aliceblue;
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
     padding: 8px;
-    display: inline-block;
 
-  }
+}
 
-  .articles article p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-  }
+form textarea {
+    resize: none;
+    height: 180px;
+}
 
-  #sports {
-    background-color: rgba(3, 165, 219,0.4);
-  }
+section h3 {
+    margin-bottom: 16px;
+}
 
-  #economy {
-    background-color: rgba(43, 226, 195,0.4);
-  }
-  
-  #environment {
-    background-color: rgba(63, 158, 63,0.4);
-    
-  }
+form button {
+    background-color: rgb(47, 47, 139);
+    color: rgb(164, 155, 155);
+    border: none;
+    cursor: pointer;
+}
 
-  #entertainment {
-    background-color: rgba(239, 239, 12,0.4);
-  }
+form button:hover {
+    background-color: rgb(25, 0, 255);
+}
+
+in:focus,
+textarea:focus {
+    outline-color: blue;
+}
+
+footer {
+    background-color: rgb(164, 155, 155);
+    color: blue;
+    padding: 16px 0;
+
+}
