--- a/style.css
+++ b/style.css
@@ -1,57 +1,70 @@
+
+:root {
+    --color-white: #fff;
+    --color-red: #e63636;
+    --color-dark1: black;
+    --color-dark2: #1e1e1e;
+    --color-blue1: rgb(36, 168, 144) ;
+    --color-blue2: aqua;
+}
 * {
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
 }
-
+    
 body {
-
+ font-family: Arial, Helvetica, sans-serif;
+ background-color: var(--color-blue2);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: 100vh;
+ color: var(--color-white);
 }
 
-.container {
-    margin: 80px auto;
-    max-width: 640px;
-    width: 100%;
+.content {
+    background-color: var(--color-dark1) ;
+    padding: 32px;
+    border-radius: 10px;
+    min-width: 30%;
+    overflow: auto;
 }
 
-form {
-    margin-top: 40px;
+.texto {
+    padding: 32px;
+    justify-content: center;
 }
 
-input, textarea, button {
-    display: block;
-    padding: 8px;
-    margin-bottom: 8px;
-    width: 100%;
-    resize: none;
+
+h1 {
+    margin-bottom: 16px;
+    text-align: center;
+}
+.content form {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
-button {
-    background-color: rgb(0, 157, 255);
-    border: none;
-    text-transform: uppercase;
-    color:rgb(0, 251, 25);
-    font-weight: bold;
-    font-size: 10px;
-    font-style: italic;
-    cursor:pointer;
-}
-
-button:hover {
-    background-color: darkgreen;
-}
-
-.mensagem-sucesso {
-    background-color: aqua;
-    padding: 16px;
-    display: none;
-}
-
-.erro-menssagem {
+.span-caracteres {
     font-size: 12px;
-    padding: 8px;
-    background-color: red;
-    color: white;
-    margin-bottom: 8px;
+    margin: 3px 0;
+    color: #e63636;
     display: none;
+
 }
+
+.inputs {
+    padding: 8px 5px;
+    outline: none ;
+    border-radius: 10px;
+    border: 2px solid var(--color-blue2);
+    width: 100%;
+    box-sizing: border-box;
+    transition: .5s;
+}
+
+.inputs:focus {
+    border-color: var(--color-blue1);
+}
+
