--- a/stely.css
+++ b/stely.css
@@ -3,29 +3,41 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 html {
     overflow-x: hidden;
 }
 
+.container img {
+    max-width: 150px;
+    width: 50%;
+    margin: 0 auto;
+    
+}
+
 .container {
-    max-width: 1024px;
+    max-width: 1000px;
     width: 100%;
     margin: 0 auto;
-
-
 }
 
 header {
-    background-color: rgba(156, 143, 2, 0.67);
+    background-color: rgba(255, 255, 255, 0.67);
     padding-top: 16px;
     color: rgb(0, 0, 0);
 }
 
+header img {
+    max-width: 100px;
+    
+}
+
 header .container {
+    display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
     padding-bottom: 16px ;
 }
 
@@ -36,6 +48,8 @@ nav {
     
     
 }
+
+nav li {}
 
 nav li {
     list-style: none;
@@ -52,7 +66,7 @@ text-decoration: none;
 
 .Menu-Hamburguer {
     width: 32px;
-    cursor: pointer;
+    cursor: pointer; 
 }
 
 .Menu-Hamburguer span {
@@ -61,16 +75,61 @@ text-decoration: none;
     background-color: aliceblue;
     display: block;
     margin-bottom: 6px;
+    background-color: black;
 }
 
+section {
+    padding: 50px 0px;
+}
 
-.container-flex {
+#imagens {
+max-height: 1980px;
+margin: auto;
+max-width: 1000px;
+
+ 
+}
+
+#new-container {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
+
 
 #logort img {
-    max-width: 300px ;
-    margin-right: 24px;
+    max-width: 150px ;
+    margin-right: 24px 0;
     border: 1px solid;
+  
 
 }
+
+#container-paragrafo {
+    text-align: center;
+    padding: 20px ;
+
+}
+
+#container-paragrafo h2 {
+    align-items: center;
+    padding: 12px;
+    font-size: 40px;    
+}
+
+#container-paragrafo p {
+    padding: 10px 80px;
+    display: flex;
+    font-size: 25px;
+    text-align:left;
+}
+
+.erp img {
+margin: 0 auto;
+display: flex;
+max-height: 1980px;
+max-width: 1000px;
+}
+
+
