--- a/stely.css
+++ b/stely.css
@@ -112,9 +112,10 @@ width: 100%;
 }
 
 #container-paragrafo h2 {
-    align-items: center;
+    align-items:center;
     padding: 12px;
     font-size: 40px;    
+    border: 1px solid;
 }
 
 #container-paragrafo p {
@@ -122,6 +123,11 @@ width: 100%;
     display: flex;
     font-size: 25px;
     text-align:left;
+    width: 80%;
+    border: 1px solid;
+    padding: 20px 0;
+    margin: 0 auto;
+   
 
     
 }
@@ -132,6 +138,26 @@ display: flex;
 max-height: 1980px;
 max-width: 1000px;
 width: 100%;
+}
+
+.paragrafo {
+    padding: 20px 0;
+    align-items: center;
+    text-align: left;
+    margin: 0 auto;
+    max-height: 1000px;
+    max-width: 1980px;
+    width: 80%;
+    border: 1px solid;
+    font-size: 18px;
+
+}
+
+.paragrafo h2 {
+    text-align: center;
+    padding: 18px;
+    font-size: 40px;    
+    border: 1px solid;
 }
 
 
