--- a/style.css
+++ b/style.css
@@ -4,3 +4,15 @@
     padding: 0;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.container {
+    max-width: 1024px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
