--- a/style.css
+++ b/style.css
@@ -16,3 +16,44 @@ header .container {
     justify-content: space-between;
     align-items: center;
 }
+
+header {
+    padding: 16px 0 0;
+    border-bottom: 1px solid #ccc;
+}
+
+.submenu {
+    display: none;
+    border: 1px solid red;
+    border-radius: 10px;
+    position: absolute;
+    left: 0 ;
+    width: 300px ;
+    top: 100%;
+}
+
+.menu > li {
+    float: left;
+    list-style: none;
+    padding: 16px;
+    border-top: 4px solid transparent;
+    position: relative;
+}
+
+.clear {
+    clear: both;
+}
+
+.menu li:hover .submenu {
+    display: block;
+}
+
+.menu li:hover {
+    border-color: red;
+}
+
+.submenu li {
+    display: block;
+    padding: 8px;
+
+}
