--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header .container {
 header {
     padding: 16px 0 0;
     border-bottom: 1px solid #ccc;
+    margin-bottom: 56px;
 }
 
 .submenu {
@@ -30,6 +31,7 @@ header {
     left: 0 ;
     width: 300px ;
     top: 100%;
+    background-color: blanchedalmond;
 }
 
 .menu > li {
@@ -57,3 +59,41 @@ header {
     padding: 8px;
 
 }
+
+.conteudo {
+    display: grid;
+    grid-template-columns: 70% 30%;
+    
+}
+
+.noticia img {
+    max-width: 100%;
+}
+
+.destaque .descricao a {
+    display: flex;
+    font-size: 2em;
+}
+
+.destaque .descricao img {
+    margin-right: 8px;
+}
+section h2 {
+    margin-bottom: 32px;
+}
+
+aside {
+    padding-left: 40px;
+}
+
+aside .descricao {
+    margin-bottom: 24px;
+}
+
+.descontos {
+    display: grid;
+    grid-template-columns: repeat(3, 32.6%);
+    column-gap: 1%;
+}
+
+
